# cloudflare_dynamic_dns

./: .gitignore  .terraform.lock.hcl  Cargo.toml  Dockerfile  Makefile  README.md  infra.tf
.github/workflows/: ci_cd.yml
src/: cf_types.rs  cloudflare.rs  dynamic_dns.rs  ip_change_watcher.rs  main.rs  zone_id.rs
