[package]
name = "cloudflare_dynamic_dns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["blocking", "rustls-tls", "json"], default-features = false }
rustls = "0.23.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
